# v4l-background-buster

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  install.sh
scripts/: patch_onnx.py
src/: cuda_kernels.cu  cuda_kernels.h  main.cpp  pipeline.cpp  pipeline.h  trt_engine.cpp  trt_engine.h  v4l2_capture.cpp  v4l2_capture.h  v4l2_output.cpp  v4l2_output.h
